Major: Completely reworked type conversion code in wicket.util.convert.  It is now much more generalized, flexible, smaller and complete.  We still need to write a bunch of new tests, but this checkin should be close to what we need.
git-svn-id: https://svn.apache.org/repos/asf/incubator/wicket/trunk/wicket@455691 13f79535-47bb-0310-9956-ffa450edef68